# OOP

./: variant.json
lab01/: CMakeLists.txt  bitstring.cpp  bitstring.h  main.cpp  report.docx
lab02/: CMakeLists.txt  bitstring.cpp  bitstring.h  main.cpp  report.docx
lab1/: CMakeLists.txt  figure.h  hexagon.cpp  hexagon.h  main.cpp  octagon.cpp  octagon.h  point.cpp  point.h  report.docx  triangle.cpp  triangle.h
lab2/: CMakeLists.txt  hexagon.cpp  hexagon.h  main.cpp  point.h  report.docx  tlinkedlist.cpp  tlinkedlist.h  tlinkedlist_item.cpp  tlinkedlist_item.h
lab3/: CMakeLists.txt  hexagon.cpp  hexagon.h  main.cpp  point.h  report.docx  tlinkedlist.cpp  tlinkedlist.h  tlinkedlist_item.cpp  tlinkedlist_item.h
lab4/: CMakeLists.txt  hexagon.h  main.cpp  point.h  report.docx  tlinkedlist.cpp  tlinkedlist.h  tlinkedlist_item.cpp  tlinkedlist_item.h
lab5/: CMakeLists.txt  hexagon.h  main.cpp  point.cpp  point.h  report.docx  titerator.h  tlinkedlist.h  tlinkedlist_item.cpp  tlinkedlist_item.h
lab6/: CMakeLists.txt  hexagon.cpp  hexagon.h  main.cpp  point.cpp  point.h  report.docx  tallocator.cpp  tallocator.h  titerator.h  tlinkedlist.cpp  tlinkedlist.h  tlinkedlist_item.h  tvector.cpp  tvector.h  tvector_item.cpp  tvector_item.h
