cmake_minimum_required(VERSION 3.17)
project(lab6)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab6 main.cpp hexagon.cpp hexagon.h point.cpp point.h tlinkedlist.cpp tlinkedlist.h tlinkedlist_item.h tlinkedlist_item.cpp tvector_item.cpp tvector_item.h tvector.cpp tvector.h tallocator.cpp tallocator.h )